# uv-repo-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  smoke_test.py
example-app/: README.md  pyproject.toml
example-app/src/example_app/: main.py  main_library.py  main_library_test.py
example-lib/: README.md  pyproject.toml
example-lib/src/example_lib/: another_library.py  another_library_test.py  some_library.py  some_library_test.py
setup/: README.md  setup-utils.sh  setup.sh  upgrade.sh
